--- a/src/index.pug
+++ b/src/index.pug
@@ -18,6 +18,11 @@ html(lang='ko')
         if ogImage
             meta(property='og:image', content=ogImage)
         title #{title}
+        <!--[if IE 8]>
+        script(src='//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js')
+        script(src='//cdnjs.cloudflare.com/ajax/libs/ie8/0.6.0/ie8.js')
+        <![endif]-->
         each path in stylesheets
             link(rel='stylesheet' href=path)
     body
