added missing params.

--- a/src/_/less/index.less
+++ b/src/_/less/index.less
@@ -1,5 +1,5 @@
 body {
-    background: #ddd;
+    background: linear-gradient(to right, white , darkgray);
     li a {
         font-weight: bold;
     }
